signup page text not visible in text box fixed

--- a/src/AllMail/Allmail.module.css
+++ b/src/AllMail/Allmail.module.css
@@ -46,6 +46,11 @@
   text-overflow: ellipsis;
 }
 
+.linkstyle{
+  width:99%;
+ 
+}
+
 @media (max-width: 768px) {
   .sender {
     display: inline-block;
