--- a/src/Contact/contact.module.css
+++ b/src/Contact/contact.module.css
@@ -5,7 +5,7 @@
   display:flex;
   justify-content: center;
   align-items:normal;
-  background-image: url("./contact.jpg");
+  background-image: url("../../public/image/contact.jpg");
   background-size: 100% 100%;
 }
 
