--- a/src/signup/signup.module.css
+++ b/src/signup/signup.module.css
@@ -5,12 +5,12 @@
     grid-row: 2/4;
      display: flex;
      justify-content: center;
-     /* align-items: center; */
+     align-items: center;
      height: 90vh;
      width:100%;
-     background-image: url("./signup.jpg");
+     background-image: url("../../public/image/signup.jpg");
      background-repeat: no-repeat;
-     background-size:100% 100vh;
+     background-size:100% 100%;
    }
    
    .formcontrol {
@@ -37,6 +37,7 @@
      width:95%;
      background-color: black;
      font-weight: bold;
+     color:white;
    }
    
    
@@ -56,7 +57,7 @@
    }
    
    /* Add media queries for responsiveness */
-   @media screen and (max-width: 480px) {
+   @media(max-width: 480px) {
      .formcontrol {
        width: 100%;
      }
